Bug #14505
Fix the vulnerability by using now the POST Ajax request to update the
status. The servlet accepts only HTTP POST method. The data are sent
foth and back in JSON.